<resources>
    <string name="app_name">Salud a su Hogar LD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="prefs_file">com.marbey.saludasuhogar.PREFERENCE_FILE_KEY</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username">Username</string>
    <string name="error_while_connecting_to_the_account">Email o contraseña Incorrecta</string>
    <string name="user_is_empty">El Usuario no puede estar en blanco</string>
    <string name="nurseName">Nombre Enfermero/a</string>
    <string name="ChargeDate">Fecha de la última carga</string>
    <string name="DailyDose">Dósis Diaria</string>
    <string name="CurrentQuantity">Cantidad Actual</string>
    <string name="grandparentName">Nombre del Paciente</string>
    <string name="HavenName">Nombre del Hogar</string>
    <string name="MedicineName">Nombre de la Medicina</string>
    <string name="add">Agregar</string>
    <string name="tbAddHaven">Añadir un Nuevo Hogar</string>
    <string name="tbAddMedicine">Añadir una Nueva Medicina</string>
    <string name="tbAddGrandparent">Añadir un Nuevo Paciente</string>
    <string name="age">Edad</string>
    <string name="password">Password</string>
    <string name="Start">Inicio</string>
    <string name="Email">Email</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="chargeQuantity">Cantidad de recarga</string>
    <string name="edit">edit</string>
</resources>